<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:colorBackground"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:gravity="center"
        android:text="@string/all_deeds"
        android:textColor="?android:textColorPrimary"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/resetButton"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_weight="0.5"
            android:text="@string/reset_list"
            android:textAllCaps="false"
            android:textColor="@color/deleteRed"
            app:cornerRadius="12dp"
            app:strokeColor="@color/deleteRed"
            app:strokeWidth="1dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/resetMonthButton"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_weight="0.5"
            android:text="@string/reset_month"
            android:textAllCaps="false"
            android:textColor="@color/deleteRed"
            app:cornerRadius="12dp"
            app:strokeColor="@color/deleteRed"
            app:strokeWidth="1dp" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/addCustomDeedButton"
        style="@style/App.Button.Outlined.Primary"
        android:layout_marginTop="16dp"
        android:textStyle="bold"
        android:text="@string/add_custom" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>
